src/test/run-pass/multiline-comment.rs
// -*- rust -*-

/*
 * This is a multi-line comment.
 */
fn main() { }
