src/test/compile-fail/unbalanced-doublequote.rs
// -*- rust -*-

// error-pattern: unterminated double quote string


fn main() {
    "
}
